--- a/templates/storage/completeProfile.html
+++ b/templates/storage/completeProfile.html
@@ -19,5 +19,6 @@
         {% endfor %}
         <input type="submit" t>
     </form>
+    <p>Note: enter deadline in yyyy-mm-dd hh:mm:ss format </p>
 </body>
 </html>
